[gd_scene load_steps=7 format=2]

[ext_resource path="res://character/enemy/EnemyCurveBehavior.gd" type="Script" id=1]
[ext_resource path="res://Textures/Ships/ship_0017.png" type="Texture" id=2]
[ext_resource path="res://character/enemy/HealthBarTheme.tres" type="Theme" id=3]
[ext_resource path="res://character/enemy/EnemyCurveMovement.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -6.04771, -93.8143, 0, 0, 0, 0, 30.2958, 35.4243, 0, 0, 0, 0, 62.6012, 163.477, -59.7233, -173.131, 59.7233, 173.131, 133.269, 382.827, -78.8605, 84.403, 78.8605, -84.403, 377.578, 413.655, 0, 0, 0, 0, 514.876, -181.554 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.5, 17.5 )

[node name="EnemyCurve" type="Node2D"]
script = ExtResource( 4 )
speed = 500.0

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 7.99055, 81.1231 )
scale = Vector2( 0.990548, 0.843401 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -6.04771, -93.8143 )
rotation = 1.26524
rotate = false
loop = false

[node name="Enemy" type="Area2D" parent="Path2D/PathFollow2D" groups=["damagable"]]
rotation = -1.27409
script = ExtResource( 1 )
speed = 200.0
health = 5
chanceItemDrop = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Enemy"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D/Enemy"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
flip_v = true

[node name="ProgressBar" type="ProgressBar" parent="Path2D/PathFollow2D/Enemy"]
visible = false
margin_left = -18.0
margin_top = -24.0
margin_right = 19.0
margin_bottom = -21.0
theme = ExtResource( 3 )
value = 60.0
percent_visible = false

[node name="FiringPositions" type="Node2D" parent="Path2D/PathFollow2D/Enemy"]
position = Vector2( 0, 15 )

[node name="Position2D2" type="Position2D" parent="Path2D/PathFollow2D/Enemy/FiringPositions"]

[node name="Position2D3" type="Position2D" parent="Path2D/PathFollow2D/Enemy/FiringPositions"]
position = Vector2( -2, 9.53674e-07 )
rotation = 0.436332

[node name="Position2D4" type="Position2D" parent="Path2D/PathFollow2D/Enemy/FiringPositions"]
position = Vector2( 2, 0 )
rotation = -0.436332

[node name="Position2D5" type="Position2D" parent="Path2D/PathFollow2D/Enemy/FiringPositions"]
position = Vector2( 4, -1 )
rotation = -0.872665

[node name="Position2D6" type="Position2D" parent="Path2D/PathFollow2D/Enemy/FiringPositions"]
position = Vector2( -4, -1 )
rotation = 0.872665

[node name="FireTimer" type="Timer" parent="Path2D/PathFollow2D/Enemy"]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Path2D/PathFollow2D/Enemy"]
position = Vector2( -2.33047, 2.00442 )
rotation = -9.93354e-09
scale = Vector2( 6.37537, 3.57722 )

[connection signal="area_entered" from="Path2D/PathFollow2D/Enemy" to="Path2D/PathFollow2D/Enemy" method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="Path2D/PathFollow2D/Enemy" to="Path2D/PathFollow2D/Enemy" method="_on_Enemy_area_exited"]
[connection signal="screen_entered" from="Path2D/PathFollow2D/Enemy/VisibilityNotifier2D" to="Path2D/PathFollow2D/Enemy" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Path2D/PathFollow2D/Enemy/VisibilityNotifier2D" to="Path2D/PathFollow2D/Enemy" method="_on_VisibilityNotifier2D_screen_exited"]
